# audiobookshelf-mcp

./: .bumpversion.cfg  .dockerignore  .env.example  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  a2a.json  connector_manifest.yml  index.html  mcp_config.json  mkdocs.yml  pyproject.toml  sitemap.xml
audiobookshelf_mcp/: __init__.py  __main__.py  agent_server.py  audiobookshelf_input_models.py  audiobookshelf_response_models.py  auth.py  kg_ingest.py  kg_media.py  mcp_server.py
audiobookshelf_mcp/agent_data/: IDENTITY.md
audiobookshelf_mcp/api/: __init__.py  api_client_authors.py  api_client_base.py  api_client_email.py  api_client_libraries.py  api_client_notification.py  api_client_podcasts.py  api_client_series.py
audiobookshelf_mcp/connectors/: __init__.py  mcp_source_presets.json  tool_schema_fingerprints.json
audiobookshelf_mcp/mcp/: __init__.py  _params.py  mcp_authors.py  mcp_email.py  mcp_ingest.py  mcp_libraries.py  mcp_notification.py  mcp_podcasts.py  mcp_series.py
audiobookshelf_mcp/ontology/: __init__.py  audiobookshelf.ttl  certification.json
audiobookshelf_mcp/ontology/fixtures/: records.json
audiobookshelf_mcp/ontology/mappings/: source.yaml
audiobookshelf_mcp/ontology/migrations/: manifest.json
audiobookshelf_mcp/ontology/shapes/: connector.shacl.ttl
audiobookshelf_mcp/prompts/: main_agent.json  media_specialist.json
audiobookshelf_mcp/skills/audiobookshelf-kg-ingestion/: SKILL.md
audiobookshelf_mcp/skills/audiobookshelf-library-catalog/: SKILL.md
audiobookshelf_mcp/skills/audiobookshelf-media-operations/: SKILL.md
audiobookshelf_mcp/skills/audiobookshelf-media-operations/agents/: openai.yaml
audiobookshelf_mcp/skills/audiobookshelf-podcast-manager/: SKILL.md
audiobookshelf_mcp/skills/audiobookshelf-starter/: SKILL.md
audiobookshelf_mcp/specs/: openapi.json
concepts/: index.html
deployment/: index.html
docker/: Dockerfile  agent.compose.yml  debug.Dockerfile  mcp.compose.yml
docs/: concepts.md  configuration.md  deployment.md  index.md  installation.md  overview.md  platform.md  usage.md
installation/: index.html
overview/: index.html
platform/: index.html
scripts/: security_sanitizer.py  validate_agent.py  verify_api_integration.py
search/: search_index.json
tests/: conftest.py  test_api_wrapper.py  test_audiobookshelf_mcp_validation.py  test_auth.py  test_concept_parity.py  test_init_dynamics.py  test_kg_ingest.py  test_kg_media.py  test_startup.py
usage/: index.html
