[build-system]
requires = [ "setuptools>=80.9.0", "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "audiobookshelf-mcp"
version = "1.0.1"
description = "Audiobookshelf API + MCP Server + A2A Server"
readme = "README.md"
classifiers = [ "Development Status :: 4 - Beta", "License :: OSI Approved :: MIT License", "Environment :: Console", "Operating System :: POSIX :: Linux", "Programming Language :: Python :: 3",]
requires-python = ">=3.11, <3.15"
dependencies = [ "agent-utilities>=1.0.0", "python-dotenv>=1.0.0",]
[[project.authors]]
name = "Audel Rouhi"
email = "knucklessg1@gmail.com"

[project.license]
text = "MIT"

[project.optional-dependencies]
mcp = [ "agent-utilities[mcp]>=1.0.0",]
agent = [ "agent-utilities[agent,logfire]>=1.0.0",]
all = [ "agent-utilities[mcp,agent,logfire]>=1.0.0",]
test = [
    "pytest-xdist>=3.6.0", "pytest", "pytest-asyncio", "pytest-cov",]

[project.scripts]
audiobookshelf-mcp = "audiobookshelf_mcp.mcp_server:mcp_server"
audiobookshelf-agent = "audiobookshelf_mcp.agent_server:agent_server"

# Fleet contribution (CONCEPT:OS-5.52): advertise this package's skills and
# system-prompt blueprints so agent-utilities' skill-installer and KG prompt
# library discover them without importing this package's agent code.
[project.entry-points."agent_utilities.skill_providers"]
audiobookshelf-mcp = "audiobookshelf_mcp.skills"

[project.entry-points."agent_utilities.ontology_providers"]
audiobookshelf-mcp = "audiobookshelf_mcp.ontology"

[project.entry-points."agent_utilities.source_connector_providers"]
audiobookshelf-mcp = "audiobookshelf_mcp.connectors"

[project.entry-points."agent_utilities.prompt_providers"]
audiobookshelf-mcp = "audiobookshelf_mcp.prompts"

[tool.setuptools]
include-package-data = true

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
check_untyped_defs = true

[dependency-groups]
dev = [
    "pytest-timeout>=2.4.0",
]

[tool.setuptools.package-data]
audiobookshelf_mcp = [ "mcp_config.json", "prompts/**", "skills/**", "specs/**", "ontology/**", "connectors/**",]

[tool.ruff.lint]
select = [ "E", "F", "I", "UP", "B",]
ignore = [ "E402", "E501", "B008",]

[tool.setuptools.packages.find]
where = [ ".",]

[tool.vulture]
ignore_names = ["request", "config"]
